@@ -65,6 +65,16 @@ module.exports = function(opts){
     var opts = opts || {};
     if ( ! opts.grainstore ) opts.grainstore = {};
 
+    if (!opts.grainstore.mapnik_version) {
+        opts.grainstore.mapnik_version = mapnik.versions.mapnik;
+    }
+
+    // Be nice and warn if configured mapnik version is != instaled mapnik version
+    if (mapnik.versions.mapnik != opts.grainstore.mapnik_version) {
+        console.warn('WARNING: detected mapnik version (' + mapnik.versions.mapnik + ')' +
+            ' != configured mapnik version (' + opts.grainstore.mapnik_version + ')');
+    }
+
     // Set carto renderer configuration for MMLStore
     if ( ! opts.grainstore.carto_env ) opts.grainstore.carto_env = {};
     var cenv = opts.grainstore.carto_env;
