@@ -1,6 +1,11 @@
 Version 0.24.1
 2014-mm-dd
 
+Enhancements:
+ - Checks mapnik version for grainstore is configured, otherwise it uses
+   installed one
+
+
 Version 0.24.0
 2014-08-13
 
